# VixenCarBridge

./: .example.env  .gitignore  README.md  docker-compose.yaml  nginx.conf
containers/backend/: Dockerfile
containers/backend/app/: _config.py  alembic.ini  config.py  main.py
containers/backend/app/config/: settings.py
containers/backend/app/deployment/: pyproject.toml
containers/backend/app/deployment/migrations/: env.py
containers/backend/app/deployment/migrations/versions/: 25ea53ae024f_.py  3c981a55bee5_.py  6a2326e9d80a_create_account_as_dep_to_logger_model.py  7661748f7881_.py  916272da4472_set_middle_name_maybe_nullable.py  923488c68eb7_create_passport_model.py  b8bee9837151_create_logger_model.py  c2b20dd8f5c5_.py
containers/backend/app/storages/cdn/: s3_minio.py
containers/backend/app/storages/database/: database.py  enums.py  sync_database.py
containers/backend/app/storages/database/models/: __init__.py  base.py
containers/backend/app/storages/database/models/account/: model.py  pydantic_model.py  repository.py
containers/backend/app/storages/database/models/base/: base.py  repository.py
containers/backend/app/storages/database/types/: file.py
containers/backend/app/utils/handlers/: logger.py
containers/backend/app/utils/logger/: handler.py  middleware.py
containers/backend/app/utils/middlewares/: logger.py
docs/: README.md  Доп.md  Модели.md  Описание проекта.md  Права доступа.md  Технические требования.md  Технологические особенности.md
docs/modules/: BRUGES.md  DYOR.md
(+6 files in other folders)
