[tool.poetry]
name = "vixencarbridge-backend"
version = "0.0.1"
description = "Backend для сервиса позволяющего создавать франшизы умных парковок компании \"VixenCar\""
authors = ["Darklorianprime <kasimov.alexander.ul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"
celery = "^5.3.6"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
